--- a/Index.html
+++ b/Index.html
@@ -23,14 +23,14 @@
         <p class="lead">Input temperature in one of measurements above</p>
         <hr />
         <label for="Celc">Celsius</label>
-        <input id="Celc" type="number" placeholder="Celsius.." />
+        <input id="Celc" type="number" placeholder="Celsius../>
         <label for="Fahr">Fahrenheit</label>
-        <input id="Fahr" type="number" placeholder="Fahrenheit.." />
+        <input id="Fahr" type="number" placeholder="Fahrenheit.."  />
         <label for="Kelv">Kelvin</label>
-        <input id="Kelv" type="number" placeholder="Kelvin.." />
+        <input id="Kelv" type="number" placeholder="Kelvin.."/>
         <hr />
         <div class="d-flex justify-content-end">
-          <button class="btn btn-outline-danger btn-lg" onclick="location.href='DistConverterUI.html'">Distance conv.</button>
+          <button class="btn btn-outline-danger btn-lg" onclick="location.href='/Users/waterim/WebstormProjects/tin_10/Index.html'">Distance conv.</button>
         </div>
       </div>
     </div>
